2007-09-19  Claude Paroz  <claude@2xlibre.net>

	* docbook/fr/fr.po:
	* docbook/fr/figures/*.png: Added some French translated screenshots.

2007-09-18  Luca Ferretti  <elle.uca@libero.it>

	* docbook/it/it.po: Updated Italian translation fixing latest
	typos (I hope).

2007-09-14  Murray Cumming  <murrayc@murrayc.com>

	Just a change to the ChangeLog to make the web server reinstall 
	the files. This should cause it to use latest image files.

2007-09-18  Hendrik Brandt  <heb@gnome-de.org>

	New screenshots by Philipp Kerling
	* docbook/de/figures/rnusers-screensave-note.png
	* docbook/de/figures/rnusers-evolution-notification.png
	* docbook/de/figures/rnusers-yelp.png
	* docbook/de/figures/rnusers-evolution-attachment.png
	* docbook/de/figures/rnusers-nautilus-photos.png
	* docbook/de/figures/rnusers-tomboy-sync.png
	* docbook/de/figures/rnusers-seahorse-encrypt-multiple-files.png
	* docbook/de/figures/rnusers-evolution-7-days.png
	* docbook/de/figures/rnusers-evolution-backup.png
	
2007-09-18  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

        * docbook/es/figures/*.png: Updated Spanish screenshots by Alberto
          Caso.

2007-09-18  Gil Forcada  <gforcada@svn.gnome.org>

	* docbook/ca/ca.po: Updated Catalan translation.

2007-09-18  Hendrik Brandt  <heb@gnome-de.org>

	* docbook/de/figures/rnintroduction-screenshot.png: Add localised screenshot.

2007-09-17  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

        * docbook/es/es.po: Updated Spanish translation.

2007-09-17  Hendrik Brandt  <heb@gnome-de.org>

	* docbook/de/figures/: Add localised screenshots.

2007-09-17  Gil Forcada  <gforcada@svn.gnome.org>

	* docbook/ca/ca.po: Updated Catalan translation.

2007-09-17  Luca Ferretti  <elle.uca@libero.it>

	* docbook/it/it.po: Updated and fixed typos in Italian
	translation.

	* ChangeLog: remove "notes/" from my previous comments:

2007-09-17  Laurent Dhima  <laurenti@alblinux.net>

        * docbook/sq/sq.po: Updated Albanian translation.
