@@ -22,8 +22,6 @@
 
 	<sect1 id="index">
 		<title>Introduction</title>
-
-			<para>Attention: THIS IS AN UNFINISHED INITIAL DRAFT. DON'T BOTHER LINKING TO THIS.</para>
 			
 			<para>
 				GNOME &gnomeversion; is the latest version of the GNOME Desktop: a popular,
