@@ -11,7 +11,7 @@
     <para>
     Thanks to members of the worldwide <ulink
     url="http://developer.gnome.org/projects/gtp/">GNOME Translation
-    Project</ulink>, GNOME &version; offers support for 50 languages (at least 80 percent of
+    Project</ulink>, GNOME &version; offers support for 48 languages (at least 80 percent of
     strings translated), including the user and administration manuals for many languages.
 
     <!--
@@ -76,9 +76,7 @@
     <!-- 95% --><listitem><para>Lithuanian</para></listitem>
     <!-- 100% --><listitem><para>Macedonian</para></listitem>
     <!-- 81% --><listitem><para>Malayalam</para></listitem>
-    <!-- unlikely to meet 80% - maybe remove --><listitem><para>Nepali</para></listitem>
     <!-- 95% --><listitem><para>Norwegian Bokmål</para></listitem>
-    <!-- unlikely to meet 80% - maybe remove --><listitem><para>Persian</para></listitem>
     <!-- 94% --><listitem><para>Polish</para></listitem>
     <!-- 99% --><listitem><para>Portuguese</para></listitem>
     <!-- 95% --><listitem><para>Punjabi</para></listitem>
